--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -405,4 +405,7 @@
   <data name="EncodeCompleteActionType_Restart" xml:space="preserve">
     <value>Restart</value>
   </data>
+  <data name="WhenFileExists_Skip" xml:space="preserve">
+    <value>Skip</value>
+  </data>
 </root>
