Updated the "OS not supported" error to fire when run on Windows 7/8.

--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -213,7 +213,7 @@
     <value>Notice</value>
   </data>
   <data name="UnsupportedOSError" xml:space="preserve">
-    <value>VidCoder is not supported on your operating system. Windows XP and Server 2003 no longer work. Please install VidCoder 1.4 or upgrade your operating system.</value>
+    <value>VidCoder is not supported on your operating system. Windows 10 or later is required for this version. Please upgrade your OS or install an earlier version of VidCoder. The latest compatible version for Windows XP is VidCoder 1.4. The latest compatible version for Windows 7 is 5.21.</value>
   </data>
   <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
     <value>System sleep imminent</value>
