--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -427,4 +427,7 @@ Polling: Periodically checks the contents of the folders. Uses significant CPU a
     <comment>Shown when downloading an update.
 {0} is the update version, for example 10.4</comment>
   </data>
+  <data name="RememberLastSelectedWhenDoneCheckBox" xml:space="preserve">
+    <value>Remember the last selected "When done" action on restart</value>
+  </data>
 </root>
