Added a Hardware tab to Global Settings: this shows all available hardware and the codecs they can encode to. Added the ability to configure hardware decoding for Media Foundation. Moved QSV hardware decoding settings to the Hardware tab, added the ability to configure use for non-QSV codecs. Increased NVEnc simultaneous device cap from 3 to 5.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -380,4 +380,10 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="CompletedColumnNamePreset" xml:space="preserve">
     <value>Preset</value>
   </data>
+  <data name="NotAvailable" xml:space="preserve">
+    <value>Not available</value>
+  </data>
+  <data name="Available" xml:space="preserve">
+    <value>Available</value>
+  </data>
 </root>
