--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -439,4 +439,35 @@ Polling: Periodically checks the contents of the folders. Uses significant CPU a
   <data name="PartFileNaming_PartAtEnd" xml:space="preserve">
     <value>name.ext.part</value>
   </data>
+  <data name="HardwareTab" xml:space="preserve">
+    <value>Hardware</value>
+  </data>
+  <data name="IntelQuickSyncSection" xml:space="preserve">
+    <value>Intel QuickSync</value>
+  </data>
+  <data name="NvidiaNvencSection" xml:space="preserve">
+    <value>NVIDIA NVENC</value>
+  </data>
+  <data name="AmdVcnSection" xml:space="preserve">
+    <value>AMD VCN</value>
+  </data>
+  <data name="MediaFoundationSection" xml:space="preserve">
+    <value>Media Foundation (ARM Devices)</value>
+  </data>
+  <data name="EnableQuickSyncHyperEncodeCheckBox" xml:space="preserve">
+    <value>Enable Deep Link Hyper Encode</value>
+  </data>
+  <data name="EnableQuickSyncDecodingCheckBox" xml:space="preserve">
+    <value>Prefer Intel QuickSync for decoding video when using the QuickSync encoder.</value>
+  </data>
+  <data name="UseQsvDecodeForNonQsvEncodesCheckBox" xml:space="preserve">
+    <value>Also use QuickSync decoding when not using a QuickSync encoder.</value>
+  </data>
+  <data name="EnableDirectXDecodingCheckBox" xml:space="preserve">
+    <value>Allow use of DirectX Decoding.</value>
+  </data>
+  <data name="CodecsLabel" xml:space="preserve">
+    <value>Supported codecs: {0}</value>
+    <comment>Format string for codec lists. {0} is replaced with comma-separated list of codecs.</comment>
+  </data>
 </root>
