Added support for QSV load balancing. Added number of QSV cores to Options UI. Implemented QSV hyperencode.

--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -470,4 +470,9 @@ Polling: Periodically checks the contents of the folders. Uses significant CPU a
     <value>Supported codecs: {0}</value>
     <comment>Format string for codec lists. {0} is replaced with comma-separated list of codecs.</comment>
   </data>
+  <data name="QsvEncoderCount" xml:space="preserve">
+    <value>QSV Encoder Cores: {0}</value>
+    <comment>Indicator for how many QSV cores are available on the system.
+{0} is the number of cores, for example "2"</comment>
+  </data>
 </root>
