Rename QSV cores to Media Engine.

--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -470,9 +470,12 @@ Polling: Periodically checks the contents of the folders. Uses significant CPU a
     <value>Supported codecs: {0}</value>
     <comment>Format string for codec lists. {0} is replaced with comma-separated list of codecs.</comment>
   </data>
-  <data name="QsvEncoderCount" xml:space="preserve">
-    <value>QSV Encoder Cores: {0}</value>
-    <comment>Indicator for how many QSV cores are available on the system.
-{0} is the number of cores, for example "2"</comment>
+  <data name="QsvMediaEngineCount" xml:space="preserve">
+    <value>Media Engines: {0}</value>
+    <comment>Indicator for how many QSV media engines are available on the system.
+{0} is the number of media engines, for example "2"</comment>
+  </data>
+  <data name="EnableQuickSyncHyperEncodeToolTip" xml:space="preserve">
+    <value>Use multiple media engines to speed up a single encode where supported. Disable to allow load balancing multiple parallel encodes across media engines.</value>
   </data>
 </root>
